# gerador_endereco

./: .editorconfig  .gitignore  MANIFEST.in  README.md  pyproject.toml  random_address.py  requirements.txt  setup.cfg  setup.py  tests.ipynb
.github/workflows/: publish-to-test-pypi.yml
gerador_endereco/: random_address.py
my_package/: __init__.py
others/: addresses.ipynb  tests.ipynb
random addresses/: addresses.ipynb
script/: random_address.py
src/: gerador_endereco.py
test/: addresses.ipynb
