[project]
name = 'gerador_endereco'
version = '1.0.2'
description = 'API para criação de endereços aleatórios em um município específico'
authors = ['Michel Metran <michelmetran@gmail.com>']
license = 'MIT'
readme = 'README.md'
python = '^3.8'
homepage = 'https://github.com/open-dsa/gerador_endereco'
repository = 'https://github.com/open-dsa/gerador_endereco'
documentation = 'https://github.com/open-dsa/gerador_endereco'
keywords = ["packaging", "dependency", "infer", "pyproject.toml"]

classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Natural Language :: Portuguese',
    'Intended Audience :: Developers',
]

packages = [
    { include = 'ny_package' },
]

# Requirements
[dependencies]
pycep_correios = '^5.0.0'
requests = '^2.25.1'

[build-system]
requires = ['setuptools >= 40.6.0', 'wheel']
build-backend = 'setuptools.build_meta'
