# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[metadata]
name = gerador_endereco
version = attr: gerador_endereco.__version__
description = API para criação de endereços aleatórios em um município específico.
long_description = file: README.md
long_description_content_type = text/markdown
author = Michel Metran
author_email = michelmetran@gmail.com
# maintainer =
# maintainer_email =
license = MIT
license_file = LICENSE
# license_files = LICENSES/*
url = https://github.com/open-dsa/gerador_endereco
download_url = https://github.com/open-dsa/gerador_endereco
project_urls =
    Documentation = https://github.com/open-dsa/gerador_endereco#readme
    Issue Tracker = https://github.com/open-dsa/gerador_endereco/issues
    Source Code = https://github.com/open-dsa/gerador_endereco
keywords = python, endereço aleatório, address
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: Portuguese
    Natural Language :: Portuguese (Brazilian)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
platforms = any

[options]
python_requires = >=3.6
packages = find:
package_dir =
    = src
py_modules =
    gerador_endereco
zip_safe = False
install_requires =
    pycep_correios >= 5.0.0
    requests >= 2.10.0

[options.packages.find]
where = src

[options.extras_require]
# tests =
#   pytest
#   pytest-cov
# code =
#   flake8
